# langchain-mcp-secure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRESENTATION-NOT-FOR-GITHUB.txt  README.md  SECURITY.md  pyproject.toml
.github/workflows/: dco.yml  publish.yml  test.yml
langchain_mcps/: __init__.py  anomaly_detector.py  audit_chain.py  callback.py  middleware.py  passport_pop.py  viral_detector.py
langchain_mcps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
langchain_mcps/capabilities/: __init__.py  enforcer.py  schema.py  validator.py
langchain_mcps/delegation/: __init__.py  quota.py  quota_backend.py  token.py  validator.py
tests/: test_audit_chain.py  test_capabilities.py  test_delegation.py  test_edge_cases.py  test_integration_v1_v2x.py  test_langchain_mcps.py  test_security_boundaries.py  test_time_windows.py
