[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-mcpsecure"
version = "0.2.0"
description = "5-layer security framework for AI agents: identity, capabilities, audit, time-bound permissions, and delegation chains."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Aditya Saxena"}]
keywords = [
    "langchain", "mcps", "mcp-secure", "agent-security",
    "agent-identity", "passport", "ecdsa", "trust",
    "owasp", "agentsign", "ai-agent", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp-secure>=1.0.0",
    "langchain-core>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/Anakintano/langchain-mcps"
Repository = "https://github.com/Anakintano/langchain-mcps"
Documentation = "https://github.com/Anakintano/langchain-mcps/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["langchain_mcps*"]
